# obsidian-rs

./: Cargo.toml  config.toml  flake.nix  flake.nix.bak
.cargo/: config.toml
src/: config.rs  data.rs  main.rs  path_expander.rs  util.rs  watcher.rs
