[package]
name = "obsidian-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
notify = "8.0.0"
toml = "0.8.20"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
walkdir = "2.5.0"
rusqlite = { version = "0.31", features = ["bundled"] }
env_logger = "0.11.8"
log = "0.4.27"
home = "0.5.11"
